--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h1{
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    border-radius: 25px;
+    border-radius: 5px;
     border: 3px solid black;
     
 }
@@ -46,6 +46,8 @@ h1{
     margin: 0;
     padding: 0;
     background: no-repeat;
-    background-size: contain;
+    background-color: black;
+    background-size: 100% 100%;
     background-position: center;
+    transition: background-image 0.3s ease, background-color 0.3s ease;
 }
