--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ h1{
     
 }
 
+
 /*display flex and flexwrap is to keep the divs from stacking over each other  */
 
 .grid div {
@@ -50,4 +51,29 @@ h1{
     background-size: 100% 100%;
     background-position: center;
     transition: background-image 0.3s ease, background-color 0.3s ease;
+}
+/* everything was working fine till this point */
+.gold-explosion::after{ 
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    pointer-events: none;
+    background: radial-gradient(circle, gold 20%, transparent 70%);
+    animation: goldFlakes 0.8s ease-out forwards;
+    transform: translateX(-50%);
+    z-index: 10;
+}
+
+@keyframes goldFlakes{
+    0% {
+        opacity: 1;
+        transform: translateX(-50%) translateY(0) scale(1);
+    }
+    100%{
+        opacity: 0;
+        transform: translateX(calc(-50% + 30px)) translateY(-50%) scale(0.5);
+    }
 }
