--- a/style.css
+++ b/style.css
@@ -1,19 +1,48 @@
 body{
-    font-family: sans-serif;
-    background-color: white;
     background-image: url('https://imagez.tmz.com/image/3c/4by3/2020/03/13/3cc39427afeb41b09b6b2751155c6ccc_xl.jpg');
+    max-width: 100vw;
+    display: flex;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    text-align: center;
-    margin: 0;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.scoreBoard{
+    background-color: rgb(245, 89, 89);
+    border-radius: 20px;
+    width: 15%;
+    height: 80px;
     padding: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
 }
 
 h1{
     margin: 10px 0;
     color: white;
     text-shadow: 1px 1px 3px black;
+}
+
+h2{
+    color: white;
+}
+
+h3{
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    margin-top: -10px;
+    font-size: 40px;
 }
 
 .game-info{
@@ -26,33 +55,36 @@ h1{
 }
 
 .grid{
-    height: 640px;
-    width: 640px;
-    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    border-radius: 5px;
-    border: 3px solid black;
-    
+    height: 560px;
+    width: 560px;
+    background-color: rgba(109, 127, 151, 0.9);
+    padding: 5px;
+    color: #85796b;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5) inset, 0 1px white;
+    position: absolute;
+    top: 43%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
 }
 
 
 /*display flex and flexwrap is to keep the divs from stacking over each other  */
 
 .grid div {
-    width: 80px;
-    height: 80px;
-    box-sizing: border-box;
-    border: 1px solid lightgray;
-    margin: 0;
-    padding: 0;
-    background: no-repeat;
-    background-color: black;
-    background-size: 100% 100%;
+    width: 70px;
+    height: 70px;
+    background-size: cover;
     background-position: center;
-    transition: background-image 0.3s ease, background-color 0.3s ease;
+    background-repeat: no-repeat;
 }
-/* everything was working fine till this point */
+
+.invisble{
+    background-color: white;
+}
+
 .gold-explosion::after{ 
     content: '';
     position: absolute;
